--- a/order-service/pom.xml
+++ b/order-service/pom.xml
@@ -56,6 +56,11 @@
 			<version>31.1-jre</version>
 		</dependency>
 		<dependency>
+			<groupId>com.leonardobatistacarias.estore</groupId>
+			<artifactId>core</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
